TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "131442034235984" [label="Start"];
  "131442034235984" -> "131442034235312";
  "131442034235312" [label="Code"];
  "131442034235312" -> "131442034241264";
  "131442034241264" [label="Function"];
  "131442034241264" -> "131442034237472";
  "131442034241264" -> "131442034237136";
  "131442034241264" -> "131442034238768";
  "131442034237472" [label="main IDENTIFIER"];
  "131442034237136" [label="Parameters"];
  "131442034238768" [label="Code"];
  "131442034238768" -> "131442034240736";
  "131442034238768" -> "131442034238576";
  "131442034240736" [label="Code"];
  "131442034240736" -> "131442034238720";
  "131442034238720" [label="Declaration"];
  "131442034238720" -> "131442034235840";
  "131442034238720" -> "131442034230128";
  "131442034235840" [label="x IDENTIFIER"];
  "131442034230128" [label="1 INT"];
  "131442034238576" [label="Code"];
  "131442034238576" -> "131442034237712";
  "131442034237712" [label="Declaration"];
  "131442034237712" -> "131442034242224";
  "131442034237712" -> "131442034238960";
  "131442034242224" [label="x IDENTIFIER"];
  "131442034238960" [label="2 INT"];
}
